# mailing_service

./: .env.sample  README.md  pyproject.toml
blog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blogarticle_confirm_delete.html  blogarticle_detail.html  blogarticle_form.html  blogarticle_list.html
config/: settings.py  urls.py
fixtures/: blog.json  groups.json  mailing.json  users.json
mailing/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: start_mailing.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_clients.py  0003_mailing_owner.py  0004_alter_mailing_options.py  0005_client_owner_message_owner.py  0006_remove_message_mailing_mailing_message.py  0007_alter_log_options.py  0008_remove_log_client.py  0009_alter_log_status.py  0010_alter_log_status_alter_mailing_periodicity.py  0011_mailing_next_send_time_alter_client_email.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_detail.html  client_list.html  index.html  log_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_options.py
users/templates/users/: login.html  reset_password.html  user_form.html  user_list.html
(+1 files in other folders)
