[tool.poetry]
name = "mailing-service"
version = "0.1.0"
description = ""
authors = ["Tatyana Kharlamova <kharlamova2785@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.0.0"
psycopg2-binary = "^2.9.9"
black = "^24.4.2"
apscheduler = "^3.10.4"
pytils = "^0.4.1"
pillow = "^10.3.0"
django = "4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
